[package]
name = "rightfetch"
version = "0.1.0"
edition = "2024"
description = "Lightfetch, but rewritten on Rust."
license = "GPL-3.0"
repository = "https://github.com/wcupped/rightfetch"
readme = "README.md"

[dependencies]
colored = "3.1.1"
gethostname = "1.1.0"
procfs = "0.18.0"
rand = "0.10.0"
uptime_lib = "0.3.1"
